add formattazione pagina

--- a/index.html
+++ b/index.html
@@ -12,12 +12,33 @@
 
     <!-- Intestazione -->
     <header>
-        
+        <div class="container-one">
+            <div class="header">
+                <div class="col-xs-12">
+                    <div class="line">
+                        1 col
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Corpo -->
     <main>
-
+        <div class="container-one">
+            <div class="row">
+                <div class="col-xs-2">
+                    <div class="box uno">
+                        1 col
+                    </div>
+                </div>
+                <div class="col-xs-10">
+                    <div class="box due">
+                        1 col
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <!-- Footer -->
