add footer e header

--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
     <!-- Intestazione -->
     <header>
-        <div class="container-one">
+        <div class="container">
             <div class="header">
                 <div class="col-xs-12">
                     <div class="line">
-                        1 col
                     </div>
                 </div>
             </div>
@@ -25,16 +24,14 @@
 
     <!-- Corpo -->
     <main>
-        <div class="container-one">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-2">
                     <div class="box uno">
-                        1 col
                     </div>
                 </div>
                 <div class="col-xs-10">
                     <div class="box due">
-                        1 col
                     </div>
                 </div>
             </div>
@@ -43,7 +40,14 @@
 
     <!-- Footer -->
     <footer>
-
+        <div class="containers">
+            <div class="footer">
+                <div class="col-xs-12">
+                    <div class="line-d">
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
