add max height main

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Intestazione -->
     <header>
-        <div class="container">
+        <div class="containerh">
             <div class="header">
                 <div class="col-xs-12">
                     <div class="line">
@@ -41,7 +41,7 @@
 
     <!-- Footer -->
     <footer>
-        <div class="containers">
+        <div class="containerf">
             <div class="footer">
                 <div class="col-xs-12">
                     <div class="line-d">
