--- a/index.html
+++ b/index.html
@@ -39,27 +39,52 @@
                         <button>GENERI E MOOD</button>
                         <button>NUOVE USCITE</button>
                         <button>SCOPRI</button>
+
+                        <div class="Recenti">
+                            <h2>Recently played</h2>
+                            <br>
+                            <div class="row">
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/metal_lifting.jpg" alt="" class="img">
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/stranger.jpeg" alt="" class="img">
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/aquietplace.jpeg" alt="" class="img">
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/split.jpeg" alt="" class="img">
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/cure.jpeg" alt="" class="img">
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/sinister.jpeg" alt="" class="img">
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
-                    <div class="Recenti">
-                        <!-- <h2>Recently played</h2>
-                        <br>
-                        <div class="col-xs-2">
-                            <div class="box uno">
-                            </div>
-                        </div>
-                        <div class="col-xs-2">
-                            <div class="box uno">
-                            </div>
-                        </div>
-                        <div class="col-xs-2">
-                            <div class="box uno">
-                            </div>
-                        </div>
-                        <div class="col-xs-2">
-                            <div class="box uno">
-                            </div>
-                        </div> -->
-                    </div>
+                    
+                
                 </div>
             </div>
         </div>
