add main destro

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
                 <div class="col-xs-12">
                     <div class="line">
                         <img src="img/logo.svg" alt="Logo" class="logo">
+                        <div class="effettua">
+                            <button class="upgrade">
+                                EFFETTUA L'UPGRADE
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -33,58 +38,119 @@
                 </div>
                 <div class="col-xs-10">
                     <div class="box due">
-                        <button>IN EVIDENZIA</button>
-                        <button>PODCAST</button>
-                        <button>CLASSIFICHE</button>
-                        <button>GENERI E MOOD</button>
-                        <button>NUOVE USCITE</button>
-                        <button>SCOPRI</button>
+                        <button class="navigazione">IN EVIDENZIA</button>
+                        <button class="navigazione">PODCAST</button>
+                        <button class="navigazione">CLASSIFICHE</button>
+                        <button class="navigazione">GENERI E MOOD</button>
+                        <button class="navigazione">NUOVE USCITE</button>
+                        <button class="navigazione">SCOPRI</button>
 
-                        <div class="Recenti">
+                        <div class="Sezione">
                             <h2>Recently played</h2>
                             <br>
                             <div class="row">
                                 <div class="col-xs-1">
                                     <div class="played uno">
                                         <img src="img/metal_lifting.jpg" alt="" class="img">
+                                        <div class="brani">
+                                            Heavy Metal
+                                        </div> 
+                                        <div class="autori">
+                                            Subtitle
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
                                         <img src="img/stranger.jpeg" alt="" class="img">
+                                        <div class="brani">
+                                            Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
+                                        </div> 
+                                        <div class="autori">
+                                            Kyle Dixon & Michael Stein
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
                                         <img src="img/aquietplace.jpeg" alt="" class="img">
+                                        <div class="brani">
+                                            A quiet place
+                                        </div> 
+                                        <div class="autori">
+                                            Subtitle
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
                                         <img src="img/split.jpeg" alt="" class="img">
+                                        <div class="brani">
+                                            Split
+                                        </div> 
+                                        <div class="autori">
+                                            Subtitle
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
                                         <img src="img/cure.jpeg" alt="" class="img">
+                                        <div class="brani">
+                                            A cure for wellness
+                                        </div> 
+                                        <div class="autori">
+                                            Subtitle
+                                        </div>
                                     </div>
                                 </div>
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
                                         <img src="img/sinister.jpeg" alt="" class="img">
+                                        <div class="brani">
+                                            Sinister
+                                        </div> 
+                                        <div class="autori">
+                                            Subtitle
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                        <div class="Sezione seconda">
+                            <h2>Creato per John Doe</h2>
+                            <span class="suggerimenti">
+                                Più ascolti, più accurati saranno i suggerimenti.
+                            </span>
+                            <div class="row">
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/radar.jpeg" alt="" class="img john">
+                                        <div class="brani">
+                                            Release Radar
+                                        </div> 
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/mixdaily.jpeg" alt="" class="img john">
+                                        <div class="brani">
+                                            Daily Mix 1
+                                        </div> 
                                     </div>
                                 </div>
 
                             </div>
                         </div>
                     </div>
-                    
-                
                 </div>
             </div>
         </div>
@@ -96,6 +162,19 @@
             <div class="footer">
                 <div class="col-xs-12">
                     <div class="line-d">
+
+                        <div class="sinistra">
+                            <img src="img/sinister.jpeg" alt="" class="listening">
+                        </div>
+
+                        <div class="centro">
+
+                        </div>
+
+                        <div class="destra">
+
+                        </div>
+
                     </div>
                 </div>
             </div>
