add sinistra footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="img/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
     <title>Spotify</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
                         <button class="navigazione">NUOVE USCITE</button>
                         <button class="navigazione">SCOPRI</button>
 
-                        <div class="Sezione">
+                        <div class="Sezione prima">
                             <h2>Recently played</h2>
                             <br>
                             <div class="row">
@@ -150,6 +151,33 @@
 
                             </div>
                         </div>
+
+                        <div class="Sezione terza">
+                            <h2>Artisti più popolari</h2>
+                            <span class="suggerimenti">
+                                Più ascolti, più accurati saranno i suggerimenti.
+                            </span>
+                            <div class="row">
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/youg.jpeg" alt="" class="img artisti">
+                                        <div class="brani">
+                                            Release Radar
+                                        </div> 
+                                    </div>
+                                </div>
+
+                                <div class="col-xs-1">
+                                    <div class="played uno">
+                                        <img src="img/einaudi.jpeg" alt="" class="img artisti">
+                                        <div class="brani">
+                                            Daily Mix 1
+                                        </div> 
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -165,6 +193,19 @@
 
                         <div class="sinistra">
                             <img src="img/sinister.jpeg" alt="" class="listening">
+                            <span id="first" class="nome">
+                                Sinister
+                            </span>
+                            <span id="second" class="nome">
+                                Brano Nome
+                            </span>
+                            <button class="folder">
+                                <i class="far fa-folder"></i>
+                            </button>
+                            <button class="heart">
+                                <i class="far fa-heart"></i>
+                            </button>
+                                        
                         </div>
 
                         <div class="centro">
