add hover brani

--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
                             <div class="row">
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/metal_lifting.jpg" alt="" class="img">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/metal_lifting.jpg" alt="" class="img">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
                                         <div class="brani">
                                             Heavy Metal
                                         </div> 
@@ -64,7 +68,11 @@
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/stranger.jpeg" alt="" class="img">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/stranger.jpeg" alt="" class="img">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
                                         <div class="brani">
                                             Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)
                                         </div> 
@@ -76,7 +84,11 @@
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/aquietplace.jpeg" alt="" class="img">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/aquietplace.jpeg" alt="" class="img">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
                                         <div class="brani">
                                             A quiet place
                                         </div> 
@@ -88,7 +100,11 @@
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/split.jpeg" alt="" class="img">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/split.jpeg" alt="" class="img">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
                                         <div class="brani">
                                             Split
                                         </div> 
@@ -100,7 +116,11 @@
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/cure.jpeg" alt="" class="img">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/cure.jpeg" alt="" class="img">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
                                         <div class="brani">
                                             A cure for wellness
                                         </div> 
@@ -112,7 +132,11 @@
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/sinister.jpeg" alt="" class="img">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/sinister.jpeg" alt="" class="img">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
                                         <div class="brani">
                                             Sinister
                                         </div> 
@@ -133,7 +157,12 @@
                             <div class="row">
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/radar.jpeg" alt="" class="img john">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/radar.jpeg" alt="" class="img john">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
+                                        
                                         <div class="brani">
                                             Release Radar
                                         </div> 
@@ -142,7 +171,11 @@
 
                                 <div class="col-xs-1">
                                     <div class="played uno">
-                                        <img src="img/mixdaily.jpeg" alt="" class="img john">
+                                        <div class="immagine-miniatura">
+                                            <img src="img/mixdaily.jpeg" alt="" class="img john">
+                                            <div><i class="far thumbnail fa-play-circle">
+                                            </i></div>
+                                        </div>
                                         <div class="brani">
                                             Daily Mix 1
                                         </div> 
