add inizio riproduzione

--- a/index.html
+++ b/index.html
@@ -236,13 +236,17 @@
                                 <i class="far fa-folder"></i>
                             </button>
                             <button class="heart">
-                                <i class="far fa-heart"></i>
+                                <i class="far favourite fa-heart"></i>
                             </button>
-                                        
                         </div>
 
                         <div class="centro">
-
+                            <div class="riproduzione">
+                                <i class="fas fa-step-backward"></i>
+                                <i class="far play fa-play-circle">
+                                </i>
+                                <i class="fas fa-step-forward"></i>
+                            </div>
                         </div>
 
                         <div class="destra">
