add fine riproduzione

--- a/index.html
+++ b/index.html
@@ -242,10 +242,28 @@
 
                         <div class="centro">
                             <div class="riproduzione">
+                                <i class="fas fa-random"></i>
                                 <i class="fas fa-step-backward"></i>
                                 <i class="far play fa-play-circle">
                                 </i>
                                 <i class="fas fa-step-forward"></i>
+                                <i class="fas fa-redo-alt"></i>
+                            </div>
+                            <div class="timeline">
+                                <span class="durata trascorsa">
+                                    0:25
+                                </span>
+                                <span class="barra">
+                                    <span class="past">
+
+                                    </span>
+                                    <span class="left">
+
+                                    </span>
+                                </span>
+                                <span class="durata complessiva">
+                                    4:35
+                                </span>
                             </div>
                         </div>
 
