--- a/index.html
+++ b/index.html
@@ -268,7 +268,16 @@
                         </div>
 
                         <div class="destra">
-
+                            <button class="elenco">
+                                <i class="fas fa-list-ul"></i>
+                            </button>
+                            <button class="desktop">
+                                <i class="fas fa-desktop"></i>
+                            </button>
+                            <button class="audio">
+                                <i class="fas fa-volume-up"></i>
+                            </button>
+                            <input type="range" class="volume">
                         </div>
 
                     </div>
