add inizio barra laterale

--- a/index.html
+++ b/index.html
@@ -35,6 +35,26 @@
             <div class="row">
                 <div class="col-xs-2">
                     <div class="box uno">
+
+                        <div class="nav">
+                            <button class="home">
+                                <i class="fas fa-home"></i> Home
+                            </button>
+                            <button class="ricerca">
+                                <i class="fas fa-search"></i> Cerca
+                            </button>
+                            <button class="libreria">
+                                <i class="fas fa-home"></i> La tua libreria
+                            </button>
+                        </div>
+
+                        <div class="playlist-elenco">
+
+                        </div>
+
+                        <div class="profilo">
+
+                        </div>
                     </div>
                 </div>
                 <div class="col-xs-10">
