add playlist section

--- a/index.html
+++ b/index.html
@@ -38,18 +38,65 @@
 
                         <div class="nav">
                             <button class="home">
-                                <i class="fas fa-home"></i> Home
+                                <div><i class="fas fa-home"></i> Home</div>
                             </button>
                             <button class="ricerca">
-                                <i class="fas fa-search"></i> Cerca
+                                <div><i class="fas fa-search"></i> Cerca</div>
                             </button>
                             <button class="libreria">
-                                <i class="fas fa-home"></i> La tua libreria
+                                <i class="fas fa-align-left"></i> La tua libreria
                             </button>
                         </div>
 
                         <div class="playlist-elenco">
-
+                            <h3>PLAYLIST</h3>
+                            <button class="crea">
+                                <i class="far fa-plus-square"></i> Crea Playlist
+                            </button>
+                            <div class="lista-playlist">
+                                <ul>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                    <button class="nome-playlist">
+                                        <li>
+                                            Nome Playlist
+                                        </li> 
+                                    </button>
+                                </ul>
+                            </div>
                         </div>
 
                         <div class="profilo">
